--- a/src/components/AboutUs/AboutUs.css
+++ b/src/components/AboutUs/AboutUs.css
@@ -55,7 +55,7 @@
   width: 250px;
   height: 100px;
   right: 20px;
-  top: 10px;
+  top: 30px;
   z-index: 2;
 }
 
@@ -63,7 +63,8 @@
   width: 250px;
   height: 100px;
   right: 20px;
-  top: 120px;
+  top: 140px;
+  z-index: 3;
 }
 
 .floating-box-left {
@@ -91,7 +92,6 @@
 
 .aboutUs-span {
   font-size: 14px;
-  font-weight: bold;
   margin-bottom: 10px;
 }
 
@@ -103,15 +103,7 @@
 .aboutUs-description {
   font-size: 18px;
   margin-bottom: 20px;
-}
-
-.outline-gradient-container {
-  display: inline-block;
-  background: linear-gradient(45deg, #4d2edb, #ab3ae0);
-  padding: 2px; /* Espesor del borde degradado */
-  border-radius: 8px; /* Borde redondeado */
-  margin: 0; /* Elimina el margen por defecto */
-  transition: transform 0.3s ease, background-color 0.3s ease;
+  font-family: "SF Pro Text", sans-serif;
 }
 
 .outline-gradient-button {
@@ -127,10 +119,67 @@
   width: auto; /* Ajusta el ancho automáticamente en pantallas grandes */
 }
 
-.outline-gradient-container:hover {
-  transform: scale(1.1); /* Escala al 110% */
+.floating-image {
+  width: 30px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
+.gradient-text-about {
+  background: linear-gradient(-45deg, #4d2edb, #ab3ae0);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-family: "SF Pro Display", sans-serif;
+}
+
+.separator {
+  width: 2px;
+  height: 75%;
+  margin-right: 10px;
+  background-color: #dfdfdf;
+}
+
+.floating-text-large {
+  font-size: 40px;
+  font-weight: bold;
+  font-family: "SF Pro Display", sans-serif;
+}
+
+.floating-text-small {
+  font-size: 16px;
+  color: #00001f;
+  opacity: 0.8;
+  font-family: "SF Pro Text", sans-serif;
+}
+
+/* Contenedor del borde degradado */
+.outline-gradient-container-about {
+  display: inline-block;
+  background: linear-gradient(45deg, #4d2edb, #ab3ae0);
+  padding: 2px; /* Espesor del borde degradado */
+  border-radius: 8px; /* Borde redondeado */
+  margin: 0; /* Elimina el margen por defecto */
+
+  transition: transform 0.3s ease, background-color 0.3s ease;
+}
+
+/* Botón con borde degradado */
+.outline-gradient-button-about {
+  background: #ffffff; /* Fondo del botón transparente */
+  color: black;
+  border: none;
+  padding: 16px 40px;
+  font-size: 16px;
+  border-radius: 7px; /* Borde redondeado */
+  cursor: pointer;
+  font-family: "SF Pro Text", sans-serif;
+  font-weight: bold;
+  width: auto; /* Ajusta el ancho automáticamente en pantallas grandes */
+}
+
+.outline-gradient-container-about:hover {
+  transform: scale(1.1); /* Escala al 110% */
+}
 /* Estilos específicos para pantallas pequeñas */
 @media (max-width: 767px) {
   .aboutUs-content {
@@ -172,5 +221,21 @@
     height: 60px;
     right: 20px;
     top: 85px;
+  }
+
+  .floating-image {
+    width: 20px;
+  }
+
+  .floating-text-large {
+    font-size: 22px;
+  }
+
+  .floating-text-small {
+    font-size: 9px;
+  }
+
+  .separator {
+    width: 1px;
   }
 }
