--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -11,6 +11,9 @@
   margin-bottom: 1rem;
 }
 
+.width-30{
+  width: 30rem;
+}
 .footer-social-icons {
   display: flex;
   gap: 10px;
@@ -18,7 +21,7 @@
 
 .social-icon {
   font-size: 1.5rem;
-  color: #343a40;
+  color: #9482e9;
   transition: color 0.3s;
 }
 
@@ -53,6 +56,15 @@
 .contact-icon {
   margin-right: 10px;
 }
+
+.mar-rig{
+  margin-left: 30px;
+}
+
+.margin-info{
+  margin-left: 5rem;
+}
+
 
 .footer-link {
   color: #343a40;
