--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -6,7 +6,7 @@
   color: #000 !important;
 }
 
-.navbar-nav .nav-item + .nav-item {
+.nav-item  {
   margin-left: 20px; /* Separación entre los enlaces */
 }
 
