fix animation btn

--- a/src/components/LandingComponets/Home/Home.css
+++ b/src/components/LandingComponets/Home/Home.css
@@ -88,12 +88,12 @@
   font-weight: bold;
   border-radius: 8px;
   cursor: pointer;
-  transition: transform 0.3s ease, background-color 0.3s ease;
   width: auto; /* Ajusta el ancho automáticamente en pantallas grandes */
+  transition: transform 0.3s ease, background-color 0.3s ease;
 }
 
 .gradient-button-home:hover {
-  transform: scale(1.1); /* Escala al 110% */
+  transform: scale(1.1) !important; /* Escala al 110% */
 }
 
 /* Contenedor del borde degradado */
@@ -107,9 +107,13 @@
   transition: transform 0.3s ease, background-color 0.3s ease;
 }
 
+.outline-gradient-button-container{
+  transition: transform 0.3s ease, background-color 0.3s ease;
+}
+
 /* Botón con borde degradado */
 .outline-gradient-button {
-  background: #f2f0fa; /* Fondo del botón transparente */
+  background: #fff; /* Fondo del botón transparente */
   color: black;
   border: none;
   padding: 16px 40px;
@@ -121,7 +125,7 @@
   width: auto; /* Ajusta el ancho automáticamente en pantallas grandes */
 }
 
-.outline-gradient-container:hover {
+.outline-gradient-container:hover, .outline-gradient-button-container:hover {
   transform: scale(1.1); /* Escala al 110% */
 }
 
