--- a/src/components/LandingComponets/Testimonials/Testimonials.css
+++ b/src/components/LandingComponets/Testimonials/Testimonials.css
@@ -10,12 +10,14 @@
   border-radius: 10px;
   text-align: center;
   padding: 10px;
+  height: 15rem !important;
 }
 
 .card-body-testimonial {
   background-color: #fff;
   border-radius: 9px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  height: 100%;
 }
 
 .testimonial-image {
