--- a/src/components/LandingComponets/Testimonials/Testimonials.css
+++ b/src/components/LandingComponets/Testimonials/Testimonials.css
@@ -66,3 +66,11 @@
 .slick-next:before {
   content: "";
 }
+
+.img-fluid{
+  transform: translateX(-.6rem);
+}
+.img-fluid.right{
+  transform: translateX(0rem);
+}
+
