--- a/src/components/LandingComponets/Home/Home.css
+++ b/src/components/LandingComponets/Home/Home.css
@@ -5,6 +5,26 @@
   overflow: hidden;
 }
 
+.line1,
+.line2,
+.line3 {
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  height: 100%;
+  border: 1px solid #E6E8F0;
+}
+.line1 {
+  width: 13rem;
+}
+.line2 {
+  width: 40rem;
+}
+.line3 {
+  width: 63rem;
+}
+
 .home-content {
   text-align: center;
   color: #333;
@@ -106,13 +126,12 @@
 /* Contenedor del borde degradado */
 .outline-gradient-container {
   display: inline-block;
-  background: linear-gradient(45deg, #4d2edb, #ab3ae0);
+  /* background: linear-gradient(45deg, #4d2edb, #ab3ae0); */
   padding: 2px; /* Espesor del borde degradado */
   border-radius: 8px; /* Borde redondeado */
   margin: 0; /* Elimina el margen por defecto */
 
   transition: transform 0.3s ease, background-color 0.3s ease;
-  
 }
 
 .outline-gradient-button-container{
@@ -121,9 +140,12 @@
 
 /* Botón con borde degradado */
 .outline-gradient-button {
-  background: #fff; /* Fondo del botón transparente */
+  /* background: #f2f0fa; */ /* Fondo del botón transparente */
+  /* background: #fff; Fondo del botón blanco */
+  background: transparent;
   color: black;
   border: none;
+  border: 2px solid #ab3ae0;
   padding: 16px 40px;
   font-size: 16px;
   border-radius: 7px; /* Borde redondeado */
