--- a/src/components/LandingComponets/Overview/Overview.css
+++ b/src/components/LandingComponets/Overview/Overview.css
@@ -10,7 +10,10 @@
 }
 
 .overview-content h2 {
-  font-size: 36px;
+  font-size: 56px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 110%; /* 61.6px */
   margin-bottom: 10px;
   font-family: "SF Pro Display", sans-serif;
 }
