--- a/src/components/LandingComponets/Pricing/Pricing.css
+++ b/src/components/LandingComponets/Pricing/Pricing.css
@@ -3,6 +3,8 @@
   min-height: 100vh;
   position: relative;
   overflow: hidden;
+  padding-top: 20px;
+  padding-bottom: 60px;
 }
 
 .overview-content {
@@ -26,6 +28,7 @@
 .card-title-princing {
   font-family: "SF Pro Display", sans-serif;
   font-size: 24px;
+  font-weight: bold;
 }
 
 .card-text-princing {
@@ -35,7 +38,6 @@
 }
 
 .pricing-card {
-  margin: 20px 0;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   display: flex;
@@ -44,7 +46,7 @@
   min-height: 400px; /* Define a minimum height */
   transition: background-position 0.5s ease-in-out, color 0.4s ease-in-out;
   background-image: linear-gradient(90deg, #fff, #fff, #ab3ae0, #4d2edb);
-  border: 1px solid #000;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
   background-position: left;
   background-size: 300%;
   border: 1px solid #ffffff !important;
@@ -53,6 +55,7 @@
 .pricing-card .card-body {
   display: flex;
   flex-direction: column;
+
   justify-content: space-between;
   flex-grow: 1;
   background-color: transparent;
@@ -64,10 +67,18 @@
   color: white;
 }
 
+.limitador {
+  width: 100%;
+  height: 1px;
+  background-color: #dfdfdf;
+}
+
 .pricing-price {
-  font-size: 22px;
+  font-size: 48px;
   font-family: "SF Pro Display", sans-serif;
-  margin: 10px 0;
+  padding: 0;
+  margin: 0;
+  line-height: 1;
 }
 
 .pricing-features {
@@ -80,7 +91,7 @@
 }
 
 .feature-icon {
-  color: #4D2EDB;
+  color: #4d2edb;
   margin-right: 10px;
   transition: 1s;
 }
@@ -100,18 +111,17 @@
   width: 100%; /* Ajusta el ancho automáticamente en pantallas grandes */
 }
 
-
-.pricing-card:hover .gradient-button-princing{
-  transition: .5s;
+.pricing-card:hover .gradient-button-princing {
+  transition: 0.5s;
   background: #fff !important;
-  color: #000 !important;
+  color: #00001f !important;
 }
-.pricing-card:hover .gradient-button-home{
-  transition: .5s;
+.pricing-card:hover .gradient-button-home {
+  transition: 0.5s;
   background: #fff !important;
-  color: #000 !important;
+  color: #00001f !important;
 }
-.pricing-card:hover .feature-icon{
+.pricing-card:hover .feature-icon {
   color: #fff !important;
 }
 .gradient-button-princing:hover {
