fix lasted styles

--- a/src/components/LandingComponets/AboutUs/AboutUs.css
+++ b/src/components/LandingComponets/AboutUs/AboutUs.css
@@ -117,6 +117,7 @@
 
 .aboutUs-description {
   font-size: 18px;
+  font-weight: 400;
   margin-bottom: 20px;
   font-family: "SF Pro Text", sans-serif;
 }
