--- a/src/components/LandingComponets/Home/Home.css
+++ b/src/components/LandingComponets/Home/Home.css
@@ -76,6 +76,7 @@
 .home-texto-content {
   color: #00001f;
   font-size: 22px;
+  font-weight: 400;
   font-family: "SF Pro Text", sans-serif;
   text-shadow: 0px 12px 30px rgba(0, 0, 0, 0.3);
 }
@@ -86,6 +87,7 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-size: 72px;
+  font-weight: 600;
   font-family: "SF Pro Display", sans-serif;
   text-shadow: 0px 12px 30px rgba(0, 0, 0, 0.3);
 }
@@ -117,6 +119,7 @@
 
 .color-h1-text {
   color: #00001f;
+  font-weight: 600;
 }
 
 .text-shadows {
