--- a/src/components/LandingComponets/Overview/Overview.css
+++ b/src/components/LandingComponets/Overview/Overview.css
@@ -25,7 +25,8 @@
   font-size: 56px;
   font-style: normal;
   font-weight: 600;
-  line-height: 110%; /* 61.6px */
+  line-height: 110%;
+  /* 61.6px */
   margin-bottom: 16px;
   font-family: "SF Pro Display", sans-serif;
 }
@@ -42,7 +43,8 @@
   padding: 20px;
   background-color: #fff;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  border-radius: 8px; /* Añade un borde redondeado si lo deseas */
+  border-radius: 8px;
+  /* Añade un borde redondeado si lo deseas */
 }
 
 .overview-icon-title {
@@ -53,8 +55,10 @@
 }
 
 .overview-image {
-  width: 30px; /* Ajusta el tamaño de la imagen según sea necesario */
-  height: 30px; /* Ajusta el tamaño de la imagen según sea necesario */
+  width: 30px;
+  /* Ajusta el tamaño de la imagen según sea necesario */
+  height: 30px;
+  /* Ajusta el tamaño de la imagen según sea necesario */
 }
 
 .overview-button {
@@ -72,6 +76,7 @@
   font-size: 24px;
   margin-top: 10px;
   margin-bottom: 5px;
+  font-weight: 700;
   text-align: start;
   font-family: "SF Pro Display", sans-serif;
 }
@@ -88,8 +93,10 @@
   width: 80%;
   max-height: 500px;
   border: none;
-  background-color: #fff; /* Color de fondo para el espacio de imagen */
-  margin: 0 auto; /* Centra la imagen en el contenedor */
+  background-color: #fff;
+  /* Color de fondo para el espacio de imagen */
+  margin: 0 auto;
+  /* Centra la imagen en el contenedor */
 }
 
 .image-overview {
@@ -101,7 +108,8 @@
   padding: 20px;
   background-color: #fff;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  border-radius: 8px; /* Añade un borde redondeado si lo deseas */
+  border-radius: 8px;
+  /* Añade un borde redondeado si lo deseas */
   position: relative;
 }
 
@@ -158,10 +166,13 @@
 }
 
 .connector-left {
-  left: calc(33.33% - 80px); /* Ajustar la posición según la columna */
+  left: calc(33.33% - 80px);
+  /* Ajustar la posición según la columna */
 }
+
 .connector-right {
-  left: calc(66.66% - 80px); /* Ajustar la posición según la columna */
+  left: calc(66.66% - 80px);
+  /* Ajustar la posición según la columna */
 }
 
 @media (max-width: 767px) {
@@ -177,6 +188,13 @@
     font-size: 32px;
     font-style: normal;
     font-weight: 600;
-    line-height: 110%; /* 35.2px */
+    line-height: 110%;
+    /* 35.2px */
+  }
+}
+
+@media (width < 768px) {
+  .overview-content {
+    padding: 0 2rem !important;
   }
 }
